@@ -272,6 +272,10 @@ $mailbox_select_style = getPref($data_dir, $username, 'mailbox_select_style', 0)
 // or time based on time distance from date of message 
 $show_full_date = getPref($data_dir, $username, 'show_full_date', 0);
 
+// Allow user to customize the truncation of the subject/from length
+$truncate_subject = getPref($data_dir, $username, 'truncate_subject', 50);
+$truncate_sender = getPref($data_dir, $username, 'truncate_sender', 50);
+
 do_hook('loading_prefs');
 
 ?>
